js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunctionWithCrossModuleInliner/lib2/l2.2.kt
fun qux(): Int {
    try {
        return foo()
    } catch(ex: ClassCastException) {
        return 2
    }
}
